--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -26,7 +26,7 @@ body {
     color: lightslategrey;
     text-align: center;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 14px;
+    font-size: 12px;
     line-height: 1.42857;
     min-height: 1500px;
     max-height: max-content;
@@ -242,6 +242,123 @@ img {
     margin: auto;
     width: 100%;
     height: 450px;
+    background-size: cover;
+}
+
+/*SHOW SINGLE MOVIE*/
+
+.single-movie-listing {
+    background-color: #f7f7f7;
+    border: 2px solid #f1f3f0;
+    border-radius: 9px;
+    box-shadow: 0 1px #f1f3f0;
+    height: 650px;
+    margin-bottom: 50px;
+    padding: 0;
+}
+
+.single-movie-infos {
+    background-color: #f7f7f7;
+    border: 2px solid #f1f3f0;
+    border-radius: 9px;
+    box-shadow: 0 1px #f1f3f0;
+    height: 651px;
+    margin-bottom: 50px;
+    padding: 0;
+}
+
+.single-movie-infos .single-movie-infos-title {
+    font-weight: bold;
+    line-height: 25px;
+    max-height: 75px;
+    overflow: hidden;
+    text-transform: uppercase;
+}
+
+.single-movie-infos .single-movie-infos-description {
+    /*background-color: pink;*/
+    font-size: 30px;
+    margin-top: 10px;
+    font-weight: bold;
+    line-height: 40px;
+    min-height: 165px;
+    overflow: hidden;
+}
+
+.single-movie-infos .single-movie-infos-additional {
+    text-align: right;
+    background-color: pink;
+    font-size: 20px;
+    margin-top: 5px;
+    font-weight: bold;
+    line-height: 20px;
+    min-height: 30px;
+    overflow: hidden;
+}
+
+.single-movie-infos .single-movie-infos-actors {
+    background-color: yellowgreen;
+    font-weight: bold;
+    margin-top: 10px;
+    line-height: 25px;
+    min-height: 165px;
+    overflow: hidden;
+}
+
+.single-movie-infos .single-movie-infos-awards {
+    background-color: red;
+    font-weight: bold;
+    margin-top: 10px;
+    line-height: 25px;
+    min-height: 165px;
+    overflow: hidden;
+}
+
+/*.single-movie-listing .single-movie-listing-description {*/
+/*    color: #586f6f;*/
+/*    font-size: 30px;*/
+/*    font-weight: 200;*/
+/*    max-height: 100px;*/
+/*    overflow: hidden;*/
+/*    padding: 5px 15px;*/
+/*}*/
+
+/*.single-movie-listing .single-movie-listing-extra-info .single-movie-price {*/
+/*    color: #4169E1 !important;*/
+/*    font-size: 15px;*/
+/*    font-weight: bold;*/
+/*    line-height: 34px;*/
+/*    margin-right: 70px;*/
+/*    margin-top: -18px;*/
+/*    text-align: right;*/
+/*}*/
+
+/*.single-movie-listing .single-movie-listing-extra-info .single-movie-author-name {*/
+/*    font-size: 15px;*/
+/*    font-weight: 200;*/
+/*    line-height: 30px;*/
+/*    max-height: 30px;*/
+/*    margin-top: 4px;*/
+/*    margin-right: 40px;*/
+/*    margin-bottom: 5px;*/
+/*    text-align: right;*/
+/*}*/
+
+/*.single-movie-listing .single-movie-box-image-container {*/
+/*    !*max-height: 550px;*!*/
+/*    overflow: hidden;*/
+/*    display: block;*/
+/*    background-size: cover;*/
+/*}*/
+
+.single-movie-listing .single-movie-box-image-container .single-movie-box-image {
+    border-bottom: 1px solid #ededed;
+    border-top-left-radius: 9px;
+    border-top-right-radius: 9px;
+    display: block;
+    margin: auto;
+    width: 100%;
+    height: 650px;
     background-size: cover;
 }
 
