--- a/src/main/resources/templates/fragmets/moviediv.html
+++ b/src/main/resources/templates/fragmets/moviediv.html
@@ -17,7 +17,7 @@
 <div class="col-md-3" th:fragment="moviediv">
     <div class="movies-listing">
         <div class="row">
-            <a th:href="@{'/movies/' + ${movie.name}}">
+            <a th:href="@{'/movie/' + ${movie.id}}">
                 <div class="col-lg-12">
                     <div class="movies-box-image-container">
                         <img role="presentation"
@@ -40,7 +40,6 @@
             </div>
         </div>
     </div>
-</div>
 </div>
 
 </body>
