--- a/src/main/resources/templates/user/categoryMovies.html
+++ b/src/main/resources/templates/user/categoryMovies.html
@@ -44,6 +44,9 @@
                 <ul class="dropdown-menu">
                     <li><a tabindex="-1" href="#" th:href="@{'/movies/sorted/name/page/1/'}">Name</a></li>
                 </ul>
+                <ul class="dropdown-menu">
+                    <li><a tabindex="-1" href="#" th:href="@{'/movies/sorted/time/page/1/'}">Time</a></li>
+                </ul>
             </li>
         </ul>
     </li>
