--- a/src/main/resources/templates/fragmets/moviediv.html
+++ b/src/main/resources/templates/fragmets/moviediv.html
@@ -29,16 +29,40 @@
                 </div>
             </a>
         </div>
-        <div class="row movies-listing-extra-info">
-            <div class="small movie-author-name">
+        <div class="movies-listing-extra">
+            <div class="movies-listing-extra-item col-md-4">
+                <div class="small movie-price">
                 Time
+                </div>
+            </div>
+            <div class="movies-listing-extra-item col-md-4">
+                <div class="small movie-price">
+                Year
+                </div>
+            </div>
+            <div class="movies-listing-extra-item col-md-4">
+                <div class="small movie-price">
+                Country
+                </div>
             </div>
         </div>
-        <div class="row movies-listing-extra-info">
-            <div class="small movie-price">
-                120 min
+        <div class="movies-listing-extra">
+            <div class="movies-listing-extra-item col-md-4">
+                <div class="small movie-price" th:text="${movie.minutes}">
+                </div>
+            </div>
+            <div class="movies-listing-extra-item col-md-4">
+                <div class="small movie-price">
+                1992
+                </div>
+            </div>
+            <div class="movies-listing-extra-item col-md-4">
+                <div class="small movie-price">
+                Belgium
+                </div>
             </div>
         </div>
+
     </div>
 </div>
 
