--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -277,9 +277,10 @@ img {
     border: 2px solid #f1f3f0;
     border-radius: 9px;
     box-shadow: 0 1px #f1f3f0;
-    height: 650px;
+    height: 675px;
     margin-bottom: 50px;
     padding: 0;
+
 }
 
 .single-movie-infos {
@@ -287,9 +288,11 @@ img {
     border: 2px solid #f1f3f0;
     border-radius: 9px;
     box-shadow: 0 1px #f1f3f0;
-    height: 651px;
+    height: 675px;
     margin-bottom: 50px;
     padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .single-movie-infos .single-movie-infos-title {
@@ -311,14 +314,15 @@ img {
 }
 
 .single-movie-infos .single-movie-infos-additional {
-    text-align: right;
-    background-color: pink;
+    color: #4169E1;
     font-size: 20px;
     margin-top: 5px;
     font-weight: bold;
     line-height: 20px;
     min-height: 30px;
     overflow: hidden;
+    display: flex;
+    justify-content: space-between;
 }
 
 .single-movie-infos .single-movie-infos-actors {
