--- a/src/main/resources/templates/user/categoryMovies.html
+++ b/src/main/resources/templates/user/categoryMovies.html
@@ -33,7 +33,7 @@
             <li><a href="#" type="button">Something</a></li>
         </ul>
     </li>
-    <li class="dropdown active">
+    <li class="dropdown">
         <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
             Movies <span class="caret"></span>
         </a>
@@ -42,10 +42,34 @@
             <li class="dropdown-submenu">
                 <a class="test" tabindex="-1" href="#">Sorted By<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a tabindex="-1" href="#" th:href="@{'/movies/sorted/name/page/1/'}">Name</a></li>
-                </ul>
-                <ul class="dropdown-menu">
-                    <li><a tabindex="-1" href="#" th:href="@{'/movies/sorted/time/page/1/'}">Time</a></li>
+                    <li class="dropdown-submenu">
+                        <a class="test" href="#">Name<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" th:href="@{'/movies/sorted/asc/name/page/1'}">Ascending</a></li>
+                            <li><a href="#" th:href="@{'/movies/sorted/desc/name/page/1'}" >Descending</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu">
+                        <a class="test" href="#">Time<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" th:href="@{'/movies/sorted/asc/time/page/1'}">Ascending</a></li>
+                            <li><a href="#" th:href="@{'/movies/sorted/desc/time/page/1'}">Descending</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu">
+                        <a class="test" href="#">Year<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" th:href="@{'/movies/sorted/asc/year/page/1'}">Ascending</a></li>
+                            <li><a href="#" th:href="@{'/movies/sorted/desc/year/page/1'}">Descending</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu">
+                        <a class="test" href="#">Country<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" th:href="@{'/movies/sorted/asc/country/page/1'}">Ascending</a></li>
+                            <li><a href="#" th:href="@{'/movies/sorted/desc/country/page/1'}">Descending</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
         </ul>
@@ -83,7 +107,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h1 class="category-header-2">Science Fiction</h1>
+        <h1 class="category-header-2" th:text="${categoryDTO.name}"></h1>
     </div>
 </div>
 
