--- a/src/main/resources/templates/user/movies/moviesSorted.html
+++ b/src/main/resources/templates/user/movies/moviesSorted.html
@@ -57,6 +57,20 @@
                             <li><a href="#" th:href="@{'/movies/sorted/desc/time/page/1'}">Descending</a></li>
                         </ul>
                     </li>
+                    <li class="dropdown-submenu">
+                        <a class="test" href="#">Year<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" th:href="@{'/movies/sorted/asc/year/page/1'}">Ascending</a></li>
+                            <li><a href="#" th:href="@{'/movies/sorted/desc/year/page/1'}">Descending</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu">
+                        <a class="test" href="#">Country<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" th:href="@{'/movies/sorted/asc/country/page/1'}">Ascending</a></li>
+                            <li><a href="#" th:href="@{'/movies/sorted/desc/country/page/1'}">Descending</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
         </ul>
