--- a/src/main/resources/templates/user/categories.html
+++ b/src/main/resources/templates/user/categories.html
@@ -24,6 +24,7 @@
 
 
 <ul class="nav nav-pills admin-navbar">
+
     <li><a href="#" th:href="@{'/'}" >Main Page</a></li>
     <li class="dropdown active">
         <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
@@ -31,7 +32,6 @@
         </a>
         <ul class="dropdown-menu">
             <li><a href="#" th:href="@{'/categories/page/1'}" type="button">Show All Categories</a></li>
-            <li><a href="#" type="button">Something</a></li>
         </ul>
     </li>
     <li class="dropdown">
@@ -80,8 +80,7 @@
             Actors <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-            <li><a href="#" th:href="@{'/movies/page/1'}" type="button" >Show All Movies</a></li>
-            <li><a href="#">Create New Movie</a></li>
+            <li><a href="#" th:href="@{'/actors/page/1'}" type="button" >Show All Actors</a></li>
         </ul>
     </li>
     <li class="dropdown">
@@ -89,8 +88,15 @@
             Directors <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-            <li><a href="#">Show All Movies</a></li>
-            <li><a href="#">Create New Movie</a></li>
+            <li><a href="#">Coming Soon</a></li>
+        </ul>
+    </li>
+    <li class="dropdown">
+        <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
+            Series <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+            <li><a href="#">Coming Soon</a></li>
         </ul>
     </li>
 </ul>
