--- a/src/main/resources/templates/user/movies/showMovie.html
+++ b/src/main/resources/templates/user/movies/showMovie.html
@@ -30,6 +30,7 @@
         });
     });
 </script>
+
 <ul class="nav nav-pills admin-navbar">
     <li><a href="#" th:href="@{'/'}" >Main Page</a></li>
     <li class="dropdown">
@@ -38,7 +39,6 @@
         </a>
         <ul class="dropdown-menu">
             <li><a href="#" th:href="@{'/categories/page/1'}" type="button">Show All Categories</a></li>
-            <li><a href="#" type="button">Something</a></li>
         </ul>
     </li>
     <li class="dropdown active">
@@ -87,8 +87,7 @@
             Actors <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-            <li><a href="#" th:href="@{'/movies/page/1'}" type="button" >Show All Movies</a></li>
-            <li><a href="#">Create New Movie</a></li>
+            <li><a href="#" th:href="@{'/actors/page/1'}" type="button" >Show All Actors</a></li>
         </ul>
     </li>
     <li class="dropdown">
@@ -96,11 +95,20 @@
             Directors <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-            <li><a href="#">Show All Movies</a></li>
-            <li><a href="#">Create New Movie</a></li>
+            <li><a href="#">Coming Soon</a></li>
+        </ul>
+    </li>
+    <li class="dropdown">
+        <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
+            Series <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+            <li><a href="#">Coming Soon</a></li>
         </ul>
     </li>
 </ul>
+
+
 <div class="container-fluid" style="margin-top: 50px">
 
 
