--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -277,7 +277,7 @@ img {
     border: 2px solid #f1f3f0;
     border-radius: 9px;
     box-shadow: 0 1px #f1f3f0;
-    height: 675px;
+    height: 425px;
     margin-bottom: 50px;
     padding: 0;
 
@@ -288,12 +288,43 @@ img {
     border: 2px solid #f1f3f0;
     border-radius: 9px;
     box-shadow: 0 1px #f1f3f0;
-    height: 675px;
+    height: 425px;
     margin-bottom: 50px;
     padding: 0;
     display: flex;
     flex-direction: column;
 }
+
+.single-movie-infos-buttons {
+    margin-top: auto;
+    display: flex;
+    justify-content: space-around;
+}
+
+.single-movie-actors {
+    background-color: #f7f7f7;
+    border: 2px solid #f1f3f0;
+    border-radius: 9px;
+    box-shadow: 0 1px #f1f3f0;
+    height: 175px;
+    margin-bottom: 50px;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.single-movie-actors .single-movie-actors-box-image-container .single-movie-actors-box-image {
+    border-bottom: 1px solid #ededed;
+    border-top-left-radius: 9px;
+    border-top-right-radius: 9px;
+    display: block;
+    margin: auto;
+    width: 100%;
+    height: 175px;
+    background-size: cover;
+}
+
 
 .single-movie-infos .single-movie-infos-title {
     font-weight: bold;
@@ -303,15 +334,17 @@ img {
     text-transform: uppercase;
 }
 
+
 .single-movie-infos .single-movie-infos-description {
     /*background-color: pink;*/
     font-size: 30px;
-    margin-top: 10px;
+    margin-top: 40px;
     font-weight: bold;
     line-height: 40px;
     min-height: 165px;
     overflow: hidden;
 }
+
 
 .single-movie-infos .single-movie-infos-additional {
     color: #4169E1;
@@ -387,7 +420,7 @@ img {
     display: block;
     margin: auto;
     width: 100%;
-    height: 650px;
+    height: 425px;
     background-size: cover;
 }
 
