--- a/src/main/resources/templates/user/actors/actorsSorted.html
+++ b/src/main/resources/templates/user/actors/actorsSorted.html
@@ -24,7 +24,6 @@
 
 
 <ul class="nav nav-pills admin-navbar">
-
     <li><a href="#" th:href="@{'/'}" >Main Page</a></li>
     <li class="dropdown">
         <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
@@ -101,7 +100,7 @@
                 </ul>
             </li>
         </ul>
-    </li>>
+    </li>
     <li class="dropdown">
         <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
             Directors <span class="caret"></span>
@@ -119,7 +118,6 @@
         </ul>
     </li>
 </ul>
-
 
 <script>
     $(document).ready(function(){
@@ -158,7 +156,7 @@
         <nav aria-label="Pagination">
             <ul class="pagination justify-content-center">
                 <li class="page-item" th:each="pageNumber : ${pageNumbers}" >
-                    <a class="page-link" th:href="@{|/actors/page/${pageNumber}|}" th:text=${pageNumber}>1</a>
+                    <a class="page-link" th:href="@{|/actors/sorted/${sortType}/${sortBy}/page/${pageNumber}|}" th:text=${pageNumber}>1</a>
                 </li>
             </ul>
         </nav>
