--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -276,14 +276,14 @@ img {
     background-size: cover;
 }
 
-/*SHOW SINGLE MOVIE*/
+/*SHOW SINGLE MOVIE / SHOW SINGLE ACTOR*/
 
 .single-movie-listing {
     background-color: #f7f7f7;
     border: 2px solid #f1f3f0;
     border-radius: 9px;
     box-shadow: 0 1px #f1f3f0;
-    height: 425px;
+    height: 450px;
     margin-bottom: 50px;
     padding: 0;
 
@@ -294,18 +294,60 @@ img {
     border: 2px solid #f1f3f0;
     border-radius: 9px;
     box-shadow: 0 1px #f1f3f0;
-    height: 425px;
+    height: auto;
+    min-height: 450px;
     margin-bottom: 50px;
     padding: 0;
     display: flex;
     flex-direction: column;
 }
 
+
 .single-movie-infos-buttons {
     margin-top: auto;
     display: flex;
     justify-content: space-around;
 }
+
+.single-movie-infos .single-movie-infos-title {
+    font-weight: bold;
+    line-height: 25px;
+    max-height: 75px;
+    overflow: hidden;
+    text-transform: uppercase;
+}
+
+
+.single-movie-infos-secondary {
+    background-color: #f7f7f7;
+    border: 2px solid #f1f3f0;
+    border-radius: 9px;
+    box-shadow: 0 1px #f1f3f0;
+    height: auto;
+    margin-bottom: 50px;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.single-movie-infos-secondary .single-movie-infos-title {
+    font-weight: bold;
+    line-height: 25px;
+    max-height: 75px;
+    overflow: hidden;
+    text-transform: uppercase;
+}
+
+.single-movie-infos-secondary .single-movie-infos-description {
+    /*background-color: pink;*/
+    font-size: 30px;
+    margin-top: 10px;
+    font-weight: bold;
+    line-height: 40px;
+    overflow: hidden;
+}
+
 
 .single-movie-actors {
     background-color: #f7f7f7;
@@ -332,13 +374,7 @@ img {
 }
 
 
-.single-movie-infos .single-movie-infos-title {
-    font-weight: bold;
-    line-height: 25px;
-    max-height: 75px;
-    overflow: hidden;
-    text-transform: uppercase;
-}
+
 
 
 .single-movie-infos .single-movie-infos-description {
@@ -382,42 +418,6 @@ img {
     overflow: hidden;
 }
 
-/*.single-movie-listing .single-movie-listing-description {*/
-/*    color: #586f6f;*/
-/*    font-size: 30px;*/
-/*    font-weight: 200;*/
-/*    max-height: 100px;*/
-/*    overflow: hidden;*/
-/*    padding: 5px 15px;*/
-/*}*/
-
-/*.single-movie-listing .single-movie-listing-extra-info .single-movie-price {*/
-/*    color: #4169E1 !important;*/
-/*    font-size: 15px;*/
-/*    font-weight: bold;*/
-/*    line-height: 34px;*/
-/*    margin-right: 70px;*/
-/*    margin-top: -18px;*/
-/*    text-align: right;*/
-/*}*/
-
-/*.single-movie-listing .single-movie-listing-extra-info .single-movie-author-name {*/
-/*    font-size: 15px;*/
-/*    font-weight: 200;*/
-/*    line-height: 30px;*/
-/*    max-height: 30px;*/
-/*    margin-top: 4px;*/
-/*    margin-right: 40px;*/
-/*    margin-bottom: 5px;*/
-/*    text-align: right;*/
-/*}*/
-
-/*.single-movie-listing .single-movie-box-image-container {*/
-/*    !*max-height: 550px;*!*/
-/*    overflow: hidden;*/
-/*    display: block;*/
-/*    background-size: cover;*/
-/*}*/
 
 .single-movie-listing .single-movie-box-image-container .single-movie-box-image {
     border-bottom: 1px solid #ededed;
@@ -426,7 +426,7 @@ img {
     display: block;
     margin: auto;
     width: 100%;
-    height: 425px;
+    height: 450px;
     background-size: cover;
 }
 
