Added Show Event Functionality

--- a/src/main/resources/templates/fragmets/actordiv.html
+++ b/src/main/resources/templates/fragmets/actordiv.html
@@ -54,9 +54,7 @@
                 </div>
             </div>
             <div class="movies-listing-extra-item col-md-4">
-                <div class="small movie-price">
-                    03-11-1992
-                </div>
+                <div class="small movie-price" th:text="${actor.dateOfBirth}"></div>
             </div>
             <div class="movies-listing-extra-item col-md-4">
                 <div class="small movie-price">
