--- a/src/main/resources/templates/user/events/showEvent.html
+++ b/src/main/resources/templates/user/events/showEvent.html
@@ -137,7 +137,7 @@
                 <div class="col-lg-12">
                     <div class="single-movie-box-image-container">
                         <img role="presentation"
-                             th:src="@{'/event/' + ${event.id} + '/eventImage'}"
+                             th:src="@{'/news/' + ${event.id} + '/newsImage'}"
                              class="single-movie-box-image">
                     </div>
                 </div>
@@ -156,7 +156,7 @@
                     </div>
                 </div>
                 <div class="panel-body">
-                    <div class="single-movie-infos-description" th:text="${event.description}"></div>
+                    <div class="single-movie-infos-description" th:text="${event.description} + ${event.largeDescription}"></div>
                 </div>
             </div>
         </div>
